kubernetes/apps/media/tracearr/database/networkpolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: tracearr-postgres-operator
spec:
  description: "Let the CNPG operator reach the tracearr-postgres instances"
  # The clusterwide allow-same-namespace policy otherwise blocks the operator in database.
  endpointSelector:
    matchLabels:
      cnpg.io/cluster: tracearr-postgres
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: database
            app.kubernetes.io/name: cloudnative-pg
